--- a/crawler/jwapp/Untitled.ipynb
+++ b/crawler/jwapp/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "77722e5f-6a3a-48c3-97de-7bf1fb758ab0",
    "metadata": {},
    "outputs": [],
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "547014d3-2676-4721-bc81-2fe7f54f25d3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "s=Student(2224213619)"
+    "s=Student(2245024114)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d25e5d11-0785-4dfa-9eec-7ba34b570775",
    "metadata": {},
    "outputs": [],
@@ -32,17 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "bb72d23f-7790-4a4f-bde5-77199686c618",
    "metadata": {},
    "outputs": [],
    "source": [
-    "l=a.reset().goto(\"教学班\",\"算法分析\").list_id()"
+    "l=a.reset().goto(\"教学班\",\"思想\").list_id()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e06300c2-2ba3-4ebc-a26b-0af6d0b26b3f",
    "metadata": {},
    "outputs": [],
@@ -52,27 +52,354 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "83febe55-56dd-4a2c-bd47-069e62c3997c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "t=sl.scores_detail(\"算法分析\")"
+    "t=sl.scores_detail(\"思想道德\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "d8b49cdb-11d5-4f37-9bc7-f35c5f5a6c99",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>xh</th>\n",
+       "      <th>xm</th>\n",
+       "      <th>score</th>\n",
+       "      <th>itemList</th>\n",
+       "      <th>gpa</th>\n",
+       "      <th>coursePoint</th>\n",
+       "      <th>phonenumber</th>\n",
+       "      <th>zymc</th>\n",
+       "      <th>yxmc</th>\n",
+       "      <th>classname</th>\n",
+       "      <th>courseName</th>\n",
+       "      <th>examType</th>\n",
+       "      <th>majorFlag</th>\n",
+       "      <th>examProp</th>\n",
+       "      <th>replaceFlag</th>\n",
+       "      <th>passFlag</th>\n",
+       "      <th>specificReason</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2241524454</td>\n",
+       "      <td>高小蕊</td>\n",
+       "      <td>81</td>\n",
+       "      <td>[{'itemName': '平时成绩', 'itemPercent': '50%', 'i...</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>15148468564</td>\n",
+       "      <td>0423电气类</td>\n",
+       "      <td>电气工程学院</td>\n",
+       "      <td>电气类2407</td>\n",
+       "      <td>思想道德与法治(MLMD196514)</td>\n",
+       "      <td>开卷</td>\n",
+       "      <td>必修</td>\n",
+       "      <td>初修</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2246111812</td>\n",
+       "      <td>陈越</td>\n",
+       "      <td>77</td>\n",
+       "      <td>[{'itemName': '平时成绩', 'itemPercent': '50%', 'i...</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>15618379387</td>\n",
+       "      <td>0423电气类</td>\n",
+       "      <td>电气工程学院</td>\n",
+       "      <td>电气类2407</td>\n",
+       "      <td>思想道德与法治(MLMD196514)</td>\n",
+       "      <td>开卷</td>\n",
+       "      <td>必修</td>\n",
+       "      <td>初修</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2241414920</td>\n",
+       "      <td>贺禹博</td>\n",
+       "      <td>78</td>\n",
+       "      <td>[{'itemName': '平时成绩', 'itemPercent': '50%', 'i...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13293847007</td>\n",
+       "      <td>0423电气类</td>\n",
+       "      <td>电气工程学院</td>\n",
+       "      <td>电气类2407</td>\n",
+       "      <td>思想道德与法治(MLMD196514)</td>\n",
+       "      <td>开卷</td>\n",
+       "      <td>必修</td>\n",
+       "      <td>初修</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2243711374</td>\n",
+       "      <td>刘国涵</td>\n",
+       "      <td>73</td>\n",
+       "      <td>[{'itemName': '平时成绩', 'itemPercent': '50%', 'i...</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>15064456516</td>\n",
+       "      <td>0423电气类</td>\n",
+       "      <td>电气工程学院</td>\n",
+       "      <td>电气类2407</td>\n",
+       "      <td>思想道德与法治(MLMD196514)</td>\n",
+       "      <td>开卷</td>\n",
+       "      <td>必修</td>\n",
+       "      <td>初修</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2244413889</td>\n",
+       "      <td>黄俊达</td>\n",
+       "      <td>81</td>\n",
+       "      <td>[{'itemName': '平时成绩', 'itemPercent': '50%', 'i...</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>19928920605</td>\n",
+       "      <td>0423电气类</td>\n",
+       "      <td>电气工程学院</td>\n",
+       "      <td>电气类2407</td>\n",
+       "      <td>思想道德与法治(MLMD196514)</td>\n",
+       "      <td>开卷</td>\n",
+       "      <td>必修</td>\n",
+       "      <td>初修</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>2244225583</td>\n",
+       "      <td>严语轩</td>\n",
+       "      <td>80</td>\n",
+       "      <td>[{'itemName': '平时成绩', 'itemPercent': '50%', 'i...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13797357407</td>\n",
+       "      <td>0423电气类</td>\n",
+       "      <td>电气工程学院</td>\n",
+       "      <td>电气类2409</td>\n",
+       "      <td>思想道德与法治(MLMD196514)</td>\n",
+       "      <td>开卷</td>\n",
+       "      <td>必修</td>\n",
+       "      <td>初修</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>2245315074</td>\n",
+       "      <td>李泽成</td>\n",
+       "      <td>70</td>\n",
+       "      <td>[{'itemName': '平时成绩', 'itemPercent': '50%', 'i...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>18314012932</td>\n",
+       "      <td>0423电气类</td>\n",
+       "      <td>电气工程学院</td>\n",
+       "      <td>电气类2409</td>\n",
+       "      <td>思想道德与法治(MLMD196514)</td>\n",
+       "      <td>开卷</td>\n",
+       "      <td>必修</td>\n",
+       "      <td>初修</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>2243415785</td>\n",
+       "      <td>方一睿</td>\n",
+       "      <td>68</td>\n",
+       "      <td>[{'itemName': '平时成绩', 'itemPercent': '50%', 'i...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>19718990778</td>\n",
+       "      <td>0423电气类</td>\n",
+       "      <td>电气工程学院</td>\n",
+       "      <td>电气类2409</td>\n",
+       "      <td>思想道德与法治(MLMD196514)</td>\n",
+       "      <td>开卷</td>\n",
+       "      <td>必修</td>\n",
+       "      <td>初修</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>2244215724</td>\n",
+       "      <td>马梓杰</td>\n",
+       "      <td>70</td>\n",
+       "      <td>[{'itemName': '平时成绩', 'itemPercent': '50%', 'i...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>15327932336</td>\n",
+       "      <td>0547计算机科学与技术（越杰班）</td>\n",
+       "      <td>电子与信息学部</td>\n",
+       "      <td>计算机越杰2401</td>\n",
+       "      <td>思想道德与法治(MLMD196514)</td>\n",
+       "      <td>开卷</td>\n",
+       "      <td>必修</td>\n",
+       "      <td>初修</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>2241111243</td>\n",
+       "      <td>董行</td>\n",
+       "      <td>79</td>\n",
+       "      <td>[{'itemName': '平时成绩', 'itemPercent': '50%', 'i...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13269954429</td>\n",
+       "      <td>1601软件工程</td>\n",
+       "      <td>电子与信息学部</td>\n",
+       "      <td>软件2402</td>\n",
+       "      <td>思想道德与法治(MLMD196514)</td>\n",
+       "      <td>开卷</td>\n",
+       "      <td>None</td>\n",
+       "      <td>初修</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>91 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            xh   xm score                                           itemList  \\\n",
+       "0   2241524454  高小蕊    81  [{'itemName': '平时成绩', 'itemPercent': '50%', 'i...   \n",
+       "1   2246111812   陈越    77  [{'itemName': '平时成绩', 'itemPercent': '50%', 'i...   \n",
+       "2   2241414920  贺禹博    78  [{'itemName': '平时成绩', 'itemPercent': '50%', 'i...   \n",
+       "3   2243711374  刘国涵    73  [{'itemName': '平时成绩', 'itemPercent': '50%', 'i...   \n",
+       "4   2244413889  黄俊达    81  [{'itemName': '平时成绩', 'itemPercent': '50%', 'i...   \n",
+       "..         ...  ...   ...                                                ...   \n",
+       "86  2244225583  严语轩    80  [{'itemName': '平时成绩', 'itemPercent': '50%', 'i...   \n",
+       "87  2245315074  李泽成    70  [{'itemName': '平时成绩', 'itemPercent': '50%', 'i...   \n",
+       "88  2243415785  方一睿    68  [{'itemName': '平时成绩', 'itemPercent': '50%', 'i...   \n",
+       "89  2244215724  马梓杰    70  [{'itemName': '平时成绩', 'itemPercent': '50%', 'i...   \n",
+       "90  2241111243   董行    79  [{'itemName': '平时成绩', 'itemPercent': '50%', 'i...   \n",
+       "\n",
+       "    gpa coursePoint  phonenumber               zymc     yxmc  classname  \\\n",
+       "0   3.3           3  15148468564            0423电气类   电气工程学院    电气类2407   \n",
+       "1   2.7           3  15618379387            0423电气类   电气工程学院    电气类2407   \n",
+       "2     3           3  13293847007            0423电气类   电气工程学院    电气类2407   \n",
+       "3   2.3           3  15064456516            0423电气类   电气工程学院    电气类2407   \n",
+       "4   3.3           3  19928920605            0423电气类   电气工程学院    电气类2407   \n",
+       "..  ...         ...          ...                ...      ...        ...   \n",
+       "86    3           3  13797357407            0423电气类   电气工程学院    电气类2409   \n",
+       "87    2           3  18314012932            0423电气类   电气工程学院    电气类2409   \n",
+       "88    2           3  19718990778            0423电气类   电气工程学院    电气类2409   \n",
+       "89    2           3  15327932336  0547计算机科学与技术（越杰班）  电子与信息学部  计算机越杰2401   \n",
+       "90    3           3  13269954429           1601软件工程  电子与信息学部     软件2402   \n",
+       "\n",
+       "             courseName examType majorFlag examProp  replaceFlag  passFlag  \\\n",
+       "0   思想道德与法治(MLMD196514)       开卷        必修       初修        False      True   \n",
+       "1   思想道德与法治(MLMD196514)       开卷        必修       初修        False      True   \n",
+       "2   思想道德与法治(MLMD196514)       开卷        必修       初修        False      True   \n",
+       "3   思想道德与法治(MLMD196514)       开卷        必修       初修        False      True   \n",
+       "4   思想道德与法治(MLMD196514)       开卷        必修       初修        False      True   \n",
+       "..                  ...      ...       ...      ...          ...       ...   \n",
+       "86  思想道德与法治(MLMD196514)       开卷        必修       初修        False      True   \n",
+       "87  思想道德与法治(MLMD196514)       开卷        必修       初修        False      True   \n",
+       "88  思想道德与法治(MLMD196514)       开卷        必修       初修        False      True   \n",
+       "89  思想道德与法治(MLMD196514)       开卷        必修       初修        False      True   \n",
+       "90  思想道德与法治(MLMD196514)       开卷      None       初修        False      True   \n",
+       "\n",
+       "   specificReason  \n",
+       "0            None  \n",
+       "1            None  \n",
+       "2            None  \n",
+       "3            None  \n",
+       "4            None  \n",
+       "..            ...  \n",
+       "86           None  \n",
+       "87           None  \n",
+       "88           None  \n",
+       "89           None  \n",
+       "90           None  \n",
+       "\n",
+       "[91 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "8789f292-179c-4030-841f-ed319b7cf128",
    "metadata": {},
    "outputs": [],
@@ -82,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a4c27865-656a-484d-95d0-0c950f4b923f",
    "metadata": {},
    "outputs": [],
@@ -93,9 +420,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
