--- a/crawler/mooc/Untitled.ipynb
+++ b/crawler/mooc/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "60830ae8-d071-42ef-9540-b7f8e80c9276",
    "metadata": {},
    "outputs": [
@@ -10,112 +10,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 :\t _ _ _ D \n",
+      "1 :\t _ _ C _ \n",
       "2 :\t _ B _ _ \n",
-      "3 :\t _ _ _ D \n",
+      "3 :\t _ B _ _ \n",
       "4 :\t _ _ C _ \n",
       "5 :\t _ B _ _ \n",
-      "6 :\t _ _ C _ \n",
-      "7 :\t A _ _ _ \n",
-      "8 :\t A _ _ _ \n",
-      "9 :\t A _ _ _ \n",
-      "10 :\t _ B _ _ \n",
-      "11 :\t _ _ C _ \n",
-      "12 :\t _ _ _ D \n",
-      "13 :\t _ _ C _ \n",
-      "14 :\t _ _ C _ \n",
-      "15 :\t A _ _ _ \n",
-      "16 :\t _ _ _ D \n",
-      "17 :\t _ _ _ D \n",
-      "18 :\t _ _ _ D \n",
-      "19 :\t A _ _ _ \n",
-      "20 :\t A _ _ _ \n",
-      "21 :\t A _ _ _ \n",
-      "22 :\t _ B _ _ \n",
-      "23 :\t _ _ _ D \n",
-      "24 :\t _ _ _ D \n",
-      "25 :\t A _ _ _ \n",
-      "26 :\t A _ _ _ \n",
-      "27 :\t _ _ C _ \n",
-      "28 :\t A _ _ _ \n",
-      "29 :\t A _ _ _ \n",
-      "30 :\t A _ _ _ \n",
-      "31 :\t A _ _ _ \n",
-      "32 :\t _ B _ _ \n",
-      "33 :\t _ _ _ D \n",
-      "34 :\t _ _ _ D \n",
-      "35 :\t _ B _ _ \n",
-      "36 :\t A _ _ _ \n",
-      "37 :\t _ _ _ D \n",
-      "38 :\t _ _ C _ \n",
-      "39 :\t _ B _ _ \n",
-      "40 :\t _ B _ _ \n",
-      "41 :\t _ B _ _ \n",
-      "42 :\t _ B _ _ \n",
-      "43 :\t A _ _ _ \n",
-      "44 :\t _ B _ _ \n",
-      "45 :\t _ B _ _ \n",
-      "46 :\t _ B _ _ \n",
-      "47 :\t _ B _ _ \n",
-      "48 :\t _ _ _ D \n",
-      "49 :\t _ _ _ D \n",
-      "50 :\t A _ _ _ \n",
-      "51 :\t _ _ C _ \n",
-      "52 :\t _ _ _ D \n",
-      "53 :\t _ _ _ D \n",
-      "54 :\t _ B _ _ \n",
-      "55 :\t A _ _ _ \n",
-      "56 :\t _ _ _ D \n",
-      "57 :\t _ _ C _ \n",
-      "58 :\t _ _ _ D \n",
-      "59 :\t _ _ C _ \n",
-      "60 :\t A _ _ _ \n",
-      "61 :\t A _ \n",
-      "62 :\t A _ \n",
-      "63 :\t A _ \n",
-      "64 :\t _ B \n",
-      "65 :\t A _ \n",
-      "66 :\t A _ \n",
-      "67 :\t _ B \n",
-      "68 :\t A _ \n",
-      "69 :\t _ B \n",
-      "70 :\t _ B \n",
-      "71 :\t A _ \n",
-      "72 :\t _ B \n",
-      "73 :\t A _ \n",
-      "74 :\t A _ \n",
-      "75 :\t _ B \n",
-      "76 :\t A _ \n",
-      "77 :\t A _ \n",
-      "78 :\t A _ \n",
-      "79 :\t A _ \n",
-      "80 :\t _ B \n",
-      "81 :\t 11011011\n",
-      "82 :\t 1\n",
-      "83 :\t 语义\n",
-      "84 :\t 操作系统\n",
-      "85 :\t 00100011\n",
-      "86 :\t 1946\n",
-      "87 :\t 0\n",
-      "88 :\t 就绪\n",
-      "89 :\t 封装\n",
-      "90 :\t 240.3000\n",
-      "91 :\t 10100110\n",
-      "92 :\t 11111111,10000001\n",
-      "93 :\t 112.1717\n",
-      "94 :\t 11011010\n",
-      "95 :\t 11111101,10000011\n",
-      "96 :\t 23255.86\n",
-      "97 :\t 150.00\n",
-      "98 :\t 11.025\n",
-      "99 :\t 400,200\n",
-      "100 :\t 采样,量化,编码\n"
+      "6 :\t A _ \n",
+      "7 :\t _ B \n",
+      "8 :\t A _ \n",
+      "9 :\t A _ \n",
+      "10 :\t _ B \n"
      ]
     }
    ],
    "source": [
     "from getAnswer import *\n",
-    "getAnswer(3182395793)"
+    "getAnswer(3294188836)"
    ]
   },
   {
@@ -129,9 +39,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
